fixed capture button click error on ios and limited screen height to 100% on landscape

--- a/app/src/app/pages/animator/animator.page.scss
+++ b/app/src/app/pages/animator/animator.page.scss
@@ -106,7 +106,7 @@ video {
     top: 44px;
     z-index: 9999999;
     justify-content: center;
-    align-items: center;
+    padding-top: 45px;
     h2 {
       font-size: 20px;
     }
@@ -114,8 +114,8 @@ video {
     .overlay-container {
       text-align: center;
       ion-icon {
-        width: 150px;
-        height: 150px;
+        width: 110px;
+        height: 110px;
       }
     }
 
