--- a/app/src/app/pages/animator/components/capture-button/capture-button.component.scss
+++ b/app/src/app/pages/animator/components/capture-button/capture-button.component.scss
@@ -2,7 +2,7 @@ ion-fab-button {
   box-shadow: none;
   --box-shadow: none;
   margin-bottom: 30px;
-
+  z-index: 999999;
   ion-icon {
     font-size: 48px;
   }
