--- a/app/src/app/pages/animator/components/tabbar/tabbar.component.scss
+++ b/app/src/app/pages/animator/components/tabbar/tabbar.component.scss
@@ -4,7 +4,7 @@ ion-tab-bar {
     --border       : none;
     padding        : 0;
     justify-content: space-evenly;
-    z-index: 999999 !important;
+    z-index: 9999 !important;
     background-color: transparent !important;
     margin-bottom: env(safe-area-inset-bottom);
     height: 90px;
